# redaction_agent_workflow

./: .env  .gitignore  Architecture_overview.md  BRIEF_OVERVIEW_SOLUTION.md  README.md  custom_exception.py  deploy.sh  lambda-execution-policy.json  pyproject.toml  quick-setup.sh  requirements.txt  s3-event-configuration.json  tech_stack_opinions.md
Solution Brief Document/: BRIEF_OVERVIEW_SOLUTION.md
Technology Justification/: tech_stack_opinions.md
src/redactio_agent/: lambda_function.py  logger.py  redaction_utils.py
tests/: test_redaction_utils.py
